<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#2fb144"
    tools:context="com.example.busdriverapp.LoginActivity">

    <com.github.florent37.materialtextfield.MaterialTextField

        android:id="@+id/mtfUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:mtf_image="@mipmap/username"
        >
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="Username"
            android:textColor="#333"
            android:textColorHint="#666"
            android:textSize="20sp" />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.github.florent37.materialtextfield.MaterialTextField

        android:id="@+id/mtfPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:mtf_image="@mipmap/password"
        >
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="#333"
            android:textColorHint="#666"
            android:textSize="20sp" />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login"
            android:text="Login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="#2fb144"
            android:background="#fdf1f4"
            android:onClick="login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/error"
            android:text=""
            android:textColor="#ffffff"
            android:layout_margin="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
